# dxvk

./: meson.build
include/native/wsi/: native_wsi.h
src/dxvk/: meson.build
src/dxvk/platform/: dxvk_x11_exts.cpp
src/vulkan/: vulkan_loader.h
src/wsi/: meson.build  wsi_platform.h
src/wsi/x11/: wsi_monitor_x11.cpp  wsi_platform_x11.h  wsi_window_x11.cpp
